Test new audio models

--- a/Audio/4_test_model_audio.ipynb
+++ b/Audio/4_test_model_audio.ipynb
@@ -18,7 +18,20 @@
     "colab_type": "code",
     "id": "1WxSYVrOAJcH"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kappa/opt/miniconda3/envs/dsim/lib/python3.7/site-packages/librosa/util/decorators.py:9: NumbaDeprecationWarning: An import was requested from a module that has moved location.\n",
+      "Import requested from: 'numba.decorators', please update to use 'numba.core.decorators' or pin to Numba version 0.48.0. This alias will not be present in Numba version 0.50.0.\n",
+      "  from numba.decorators import jit as optional_jit\n",
+      "/Users/kappa/opt/miniconda3/envs/dsim/lib/python3.7/site-packages/librosa/util/decorators.py:9: NumbaDeprecationWarning: An import was requested from a module that has moved location.\n",
+      "Import of 'jit' requested from: 'numba.decorators', please update to use 'numba.core.decorators' or pin to Numba version 0.48.0. This alias will not be present in Numba version 0.50.0.\n",
+      "  from numba.decorators import jit as optional_jit\n"
+     ]
+    }
+   ],
    "source": [
     "import sounddevice as sd\n",
     "import subprocess\n",
@@ -55,7 +68,7 @@
     "# TODO:maybe move this function to some .py file\n",
     "def load_audio_model(models_dir, model_name):\n",
     "    full_name = models_dir+\"/\"+model_name\n",
-    "\n",
+    "    print(full_name)\n",
     "    model = keras.models.load_model(full_name)\n",
     "    json_name = full_name.replace(\"h5\", \"json\")\n",
     "\n",
@@ -96,9 +109,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
-      "WARNING:tensorflow:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
-      "WARNING:tensorflow:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n"
+      "../best_models//speakers.h5\n",
+      "../best_models//digits.h5\n"
      ]
     }
    ],
@@ -123,9 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "['MFCC-based speaker classifier',\n",
-       " 'Spectrogram-based digit classifier',\n",
-       " 'Spectrogram-based speaker classifier']"
+       "['MFCC-based digit classifier', 'Spectrogram-based speaker classifier']"
       ]
      },
      "execution_count": 8,
@@ -217,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -261,9 +271,10 @@
     "        else:\n",
     "            proc_rec = data_preparation.mfcc(rec, flatten = False)\n",
     "        proc_rec = proc_rec[np.newaxis,:,:,np.newaxis]\n",
-    "        pred = model[\"class_indices\"][model[\"model\"].predict_classes(proc_rec)[0]]\n",
-    "        preds.append(pred)\n",
-    "        print(\"{:50s}{}\".format(model[\"name\"]+\" prediction: \", pred))\n",
+    "        model_prediction = model[\"model\"].predict_classes(proc_rec)[0]\n",
+    "        prediction_label = model[\"class_indices\"][model_prediction]\n",
+    "        preds.append(prediction_label)\n",
+    "        print(\"{:50s}{}\".format(model[\"name\"]+\" prediction: \", prediction_label))\n",
     "\n",
     "    # print(\"Model prediction: {}\".format(preds[0]))\n",
     "    if answer is not None:\n",
@@ -273,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -288,16 +299,15 @@
       "Trimming recording...\n",
       "Predicting...\n",
       "\n",
-      "MFCC-based speaker classifier prediction:         jackson\n",
-      "Spectrogram-based digit classifier prediction:    8\n",
-      "Spectrogram-based speaker classifier prediction:  jackson\n",
+      "MFCC-based digit classifier prediction:           4\n",
+      "Spectrogram-based speaker classifier prediction:  khaled\n",
       "\n",
-      "Correct answer: gian, 8\n"
+      "Correct answer: khaled, 4\n"
      ]
     }
    ],
    "source": [
-    "preds, rec, rec_rate = test_nets(models, max_rec_length, answer=[\"gian\", 8])"
+    "preds, rec, rec_rate = test_nets(models, max_rec_length, answer=[\"khaled\", 4])"
    ]
   },
   {
@@ -327,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
