Include paper_data param for computing correct spect

--- a/Audio/3_test_model_audio.ipynb
+++ b/Audio/3_test_model_audio.ipynb
@@ -135,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "['MFCC-based digit classifier', 'Spectrogram-based speaker classifier']"
+       "['MFCC-based Digit classifier', 'Spectrogram-based speaker classifier']"
       ]
      },
      "execution_count": 8,
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -267,7 +267,7 @@
     "    print(\"Predicting...\\n\")\n",
     "    for model in models:\n",
     "        if model[\"type\"] == \"spectrogram\":\n",
-    "            proc_rec = data_preparation.compute_spectrogram(rec, normalize=True)\n",
+    "            proc_rec = data_preparation.compute_spectrogram(rec, normalize=True, paper_data=model['paper_data'])\n",
     "        else:\n",
     "            proc_rec = data_preparation.mfcc(rec, flatten = False)\n",
     "        proc_rec = proc_rec[np.newaxis,:,:,np.newaxis]\n",
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -299,15 +299,15 @@
       "Trimming recording...\n",
       "Predicting...\n",
       "\n",
-      "MFCC-based digit classifier prediction:           4\n",
+      "MFCC-based Digit classifier prediction:           4\n",
       "Spectrogram-based speaker classifier prediction:  khaled\n",
       "\n",
-      "Correct answer: khaled, 4\n"
+      "Correct answer: khaled, 5\n"
      ]
     }
    ],
    "source": [
-    "preds, rec, rec_rate = test_nets(models, max_rec_length, answer=[\"khaled\", 4])"
+    "preds, rec, rec_rate = test_nets(models, max_rec_length, answer=[\"khaled\", 5])"
    ]
   },
   {
