Update models path, change record length

--- a/Audio/3_test_model_audio.ipynb
+++ b/Audio/3_test_model_audio.ipynb
@@ -65,7 +65,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO:maybe move this function to some .py file\n",
     "def load_audio_model(models_dir, model_name):\n",
     "    full_name = models_dir+\"/\"+model_name\n",
     "    print(full_name)\n",
@@ -84,33 +83,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_dir = \"../best_models/\""
+    "models_dir = \"./best_models\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Spectrogram-based classifiers\n",
-    "# digits_model = load_audio_model(models_dir, \"digit_recognition.h5\")\n",
-    "# speakers_model = load_audio_model(models_dir, \"speaker_recognition.h5\")\n",
-    "# mfcc_speakers_model = load_audio_model(models_dir, \"mfcc_speaker_standard.h5\")\n",
-    "# models = [digits_model, speakers_model, mfcc_speakers_model]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../best_models//speakers.h5\n",
-      "../best_models//digits.h5\n"
+      "./best_models/speakers.h5\n",
+      "./best_models/digits.h5\n"
      ]
     }
    ],
@@ -120,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +124,7 @@
        "['MFCC-based Digit classifier', 'Spectrogram-based speaker classifier']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -183,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -217,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -237,7 +223,7 @@
    "source": [
     "# Debugging comments are left for the moment\n",
     "def test_nets(models, max_rec_length, answer = None,\n",
-    "            duration=2, rec_rate=8000, directory = \"test/\",\n",
+    "            duration=1.5, rec_rate=8000, directory = \"test/\",\n",
     "            filename = \"test.wav\", wait_time=0.5, db=-48):\n",
     "    create_recording(duration, rec_rate, filename, directory, wait_time=wait_time)   \n",
     "    ipd.clear_output()\n",
@@ -258,11 +244,7 @@
     "        db = int(db*0.95) # trim more violently at each step\n",
     "\n",
     "    rec = data_preparation.padding(max_rec_length, rec)\n",
-    "    \n",
-    "    # print(\"After padding\")\n",
-    "    # print(rec.shape)\n",
-    "    # sd.play(rec, rec_rate)\n",
-    "    \n",
+    "\n",
     "    preds = []\n",
     "    print(\"Predicting...\\n\")\n",
     "    for model in models:\n",
@@ -299,25 +281,15 @@
       "Trimming recording...\n",
       "Predicting...\n",
       "\n",
-      "MFCC-based Digit classifier prediction:           4\n",
-      "Spectrogram-based speaker classifier prediction:  khaled\n",
+      "MFCC-based Digit classifier prediction:           8\n",
+      "Spectrogram-based speaker classifier prediction:  yweweler\n",
       "\n",
-      "Correct answer: khaled, 5\n"
+      "Correct answer: khaled, 8\n"
      ]
     }
    ],
    "source": [
-    "preds, rec, rec_rate = test_nets(models, max_rec_length, answer=[\"khaled\", 5])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# TODO\n",
-    "\n",
-    "- General cleaning\n",
-    "- Print prediction confidence? Choose not to display prediction below some threshold?"
+    "preds, rec, rec_rate = test_nets(models, max_rec_length, answer=[\"khaled\", 8])"
    ]
   }
  ],
