Increased digit data augmentation for our recordings

--- a/Audio/3_test_model_audio.ipynb
+++ b/Audio/3_test_model_audio.ipynb
@@ -281,15 +281,15 @@
       "Trimming recording...\n",
       "Predicting...\n",
       "\n",
-      "MFCC-based Digit classifier prediction:           8\n",
-      "Spectrogram-based speaker classifier prediction:  yweweler\n",
+      "MFCC-based Digit classifier prediction:           0\n",
+      "Spectrogram-based speaker classifier prediction:  khaled\n",
       "\n",
-      "Correct answer: khaled, 8\n"
+      "Correct answer: khaled, 0\n"
      ]
     }
    ],
    "source": [
-    "preds, rec, rec_rate = test_nets(models, max_rec_length, answer=[\"khaled\", 8])"
+    "preds, rec, rec_rate = test_nets(models, max_rec_length, answer=[\"khaled\", 0])"
    ]
   }
  ],
