Upload final versions

--- a/Images/0_take_pictures.ipynb
+++ b/Images/0_take_pictures.ipynb
@@ -32,15 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OpenCV fornisce una serie di modelli pre-addestrati per la detection di specifiche classi, basati sul metodo di Viola e Jones:<br/>\n",
-    "https://docs.opencv.org/3.4/db/d28/tutorial_cascade_classifier.html<br/>\n",
-    "https://docs.opencv.org/3.4/dc/d88/tutorial_traincascade.html\n",
-    "\n",
-    "Nel caso di installazione basata su *conda*, questi modelli possono essere trovati in:<br/>\n",
-    "``.conda/envs/<ambiente>/Lib/site-packages/cv2/data/``\n",
-    "\n",
-    "Nel caso di installazione basata su *virtualenv*, questi modelli possono essere trovati in:<br/>\n",
-    "``<ambiente>/lib/python<X>/site-packages/cv2/data/``"
+    "Load model for detecting frontal faces:"
    ]
   },
   {
@@ -49,8 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Caricamento modello per il rilevamento di volti frontali\n",
-    "model_filename = 'C:/Users/gianc/Anaconda3/envs/dsim/Lib/site-packages/cv2/data/haarcascade_frontalface_default.xml'\n",
+    "model_filename = 'haarcascade_frontalface_default.xml'\n",
     "face_detector = cv.CascadeClassifier(model_filename)"
    ]
   },
