--- a/Images/1_preprocess_pictures.ipynb
+++ b/Images/1_preprocess_pictures.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "![](misc_pictures/Screenshot0.png)\n",
     "\n",
-    "While efforts were made in order to reduce unwanted variation between classes, the pictures for one individual might still present different colors, backgrounds and lighting conditions than those of another individual.\n",
+    "While efforts were made in order to reduce undesired variation between classes, the pictures for one individual might still present different colors, backgrounds and lighting conditions than those of another individual.\n",
     "\n",
     "Preliminary tests with models trained on these raw pictures resulted in very different predictions depending on the background, lighting conditions, colors and head tilting.\n",
     "\n",
