Clean the notebook

--- a/Audio/0_record_audio.ipynb
+++ b/Audio/0_record_audio.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -17,10 +24,8 @@
     "\n",
     "import librosa\n",
     "from scipy.io import wavfile as wav\n",
-    "# import simpleaudio as sa\n",
     "import IPython.display as ipd\n",
-    "import sounddevice as sd\n",
-    "# import wave"
+    "import sounddevice as sd"
    ]
   },
   {
@@ -29,7 +34,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#attempt = 0\n",
     "#name = \"gian\"\n",
     "name = \"khaled\"\n",
     "duration = 2\n",
@@ -223,7 +227,7 @@
     "temp1 = output_dir+\"temp1.wav\"\n",
     "temp2 = output_dir+\"temp2.wav\"\n",
     "temp3 = output_dir+\"temp3.wav\"\n",
-    "db=-48 # default was -96, but it didn't cut anything; test with a few recordings before deciding\n",
+    "db=-48 # based on some empirical trials\n",
     "all_files = os.listdir(input_dir)\n",
     "\n",
     "for file in tqdm(all_files):\n",
@@ -235,22 +239,6 @@
     "    os.remove(temp1)\n",
     "    os.remove(temp2)\n",
     "    os.remove(temp3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# check the durations of the cut recordings\n",
-    "# (shold be less than 2 seconds)\n",
-    "durations = []\n",
-    "for file in tqdm(os.listdir(output_dir)):\n",
-    "    sample, sample_rate = librosa.core.load(output_dir+file)\n",
-    "    duration = sample.shape[0]/sample_rate\n",
-    "    durations.append(duration)\n",
-    "durations"
    ]
   },
   {
@@ -290,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
