Increase wait time for replayed recs after silence removal

--- a/Audio/0_record_audio.ipynb
+++ b/Audio/0_record_audio.ipynb
@@ -219,6 +219,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove silence using the ffmpeg utility:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -242,6 +249,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just for being sure: let's listen to the modified libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -251,15 +265,8 @@
     "for rec_file in tqdm(os.listdir(output_dir)):\n",
     "    rec_rate, rec = wav.read(output_dir+rec_file)\n",
     "    sd.play(rec, rec_rate)\n",
-    "    time.sleep(1) # wait for the recording to play before loading the next"
+    "    time.sleep(2) # wait for the recording to play before loading the next"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
