--- a/Retrieval/0_choose_model.ipynb
+++ b/Retrieval/0_choose_model.ipynb
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we ask 5 models:\n",
+    "In this notebook we test the following 5 models:\n",
     "\n",
     "- Mobilenet\n",
     "- Densenet\n",
@@ -99,13 +99,13 @@
     "- Maxpool model from Part2 of this project\n",
     "- Doublesteps model from Part2 of this project\n",
     "\n",
-    "to find the top 10 most similar pictures to a given query picture.\n",
+    "in order to find the top 10 most similar pictures to a given query picture.\n",
     "\n",
     "The models will look for similar pictures taken from the `pictures_new` directory. For each class, 100 random pictures will be taken into consideration.\n",
     "\n",
     "Query pictures will come from the `pictures_test` directory (on which no model has been trained). For each class, 15 random queries are going to be evaluated using the Precision@k metric.\n",
     "\n",
-    "The goal is to evaluate the models on the retrieval task, in order to choose the best before querying the dataset containing celebrities pictures."
+    "The goal is to evaluate the models on the retrieval task, in order to choose the best one before querying the dataset containing celebrities pictures."
    ]
   },
   {
@@ -534,37 +534,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "test_dir = \"../Images/test_pictures/\"\n",
-    "img =  kimage.load_img(test_dir+\"alinda/alinda_120.png\", target_size=(224, 224))\n",
-    "\n",
-    "plt.imshow(img)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6666666666666666"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean([True, False, True])"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -583,6 +552,8 @@
     }
    ],
    "source": [
+    "test_dir = \"../Images/test_pictures/\"\n",
+    "img =  kimage.load_img(test_dir+\"alinda/alinda_120.png\", target_size=(224, 224))\n",
     "plt.imshow(simple_preprocessing(kimage.img_to_array(img)), cmap=\"gray\")\n",
     "plt.show()"
    ]
@@ -958,13 +929,6 @@
     "        print(\"{:11s} Average P @{:2d}: {:.3f}\".format( \"\", 10, np.mean(ap[j][10])))\n",
     "        print(\"{:11s} Mode Accuracy: {:.3f}\".format( \"\", np.mean(ap[j][\"mode\"])))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
