--- a/Retrieval/1_retrieval.ipynb
+++ b/Retrieval/1_retrieval.ipynb
@@ -359,6 +359,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please unzip the files in the \"features\" folder so that the next two files can be found:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
