--- a/Retrieval/1_retrieval.ipynb
+++ b/Retrieval/1_retrieval.ipynb
@@ -362,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please unzip the files in the \"features\" folder so that the next two files can be found:"
+    "Please unzip the file in the [features](./features) folder so that the next two files can be loaded:"
    ]
   },
   {
